add_library(potato)
target_sources(potato PRIVATE
    alpha_lifetime_mod.f90
    chamb_divB0.f90
    magfie_cyl.f90
    period_mod.f90
    input_files.f90
    field_c_mod.f90
    field_mod.f90
    inthecore_mod.f90
    field_eq_mod.f90
    field_divB0.f90
    bdivfree_mod.f90
    amn_mod.f90
    theta_rz_mod.f90
    extract_fluxcoord_mod.f90
    bdivfree.f90
    spline5_RZ.f90
    sub_alpha_lifetime.f90
    odeint_allroutines.f
    collis_nbi.f90
    rng.f90
    plag_coeff.f90
    sub_potato.f90
    level_set.f90
    minpack.f90
    profile_input.f90
    find_all_roots.f90
    sample_matrix.f90
    sample_matrix_out.f90
    sorting.f90
    resonant_int.f90
    eqmagprofs.f90
    bmod_pert.f90
  )
